force-app/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <description>Approved vendor catalog</description>
    <label>Vendor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>