force-app/main/default/objects/Vendor__c/fields/Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notes__c</fullName>
    <label>Standard Pricing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>