force-app/main/default/objects/Vendor__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <label>Primary Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>