force-app/main/default/objects/Vendor__c/fields/Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_Rating__c</fullName>
    <description>1-5. Updated by Vendor Manager only. Below 3 triggers warning when assigned to event.</description>
    <label>Quality Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>